maze.lessons.maze.island.IslandMaze.scala.error
Escaper:6: error: value ! is not a member of Boolean
if(!estFaceMur||getDirection==Direction.NORTH!){avance(); if(estFaceMur){avance(); if(estFaceMur){avance();}else{droite();}}else{droite();} }
                                             ^