maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
do{
gauche();
getDirection();
if(!estFaceMur||getDirection==Direction.NORTH!){avance(); if(estFaceMur){avance(); if(estFaceMur){avance();}else{droite();}}else{droite();} }
else{droite();}
   
   

}while (estSurBiscuit==false)
prendBiscuit();

getDirection();
}
